Updated README.md Removed unnecessary dependencies Updated Java to 22 version + jitpack + github actions Updated gradle to 8.8-rc-1 Fixed issues with Java 22 API