@@ -6,8 +6,6 @@ plugins {
 
 group = 'org.digitalsmile'
 
-
-
 repositories {
     mavenCentral()
 }
@@ -26,28 +24,14 @@ java {
 }
 
 dependencies {
-    implementation 'org.slf4j:slf4j-api:2.0.9'
-    implementation 'ch.qos.logback:logback-core:1.4.12'
-    implementation 'ch.qos.logback:logback-classic:1.4.12'
-    implementation 'io.quarkiverse.jef:linux-core:3.0.2'
-    implementation 'io.quarkiverse.jef:mcu-core:3.0.2'
-    implementation 'io.quarkiverse.jef:device-library:3.0.2'
+    implementation 'org.slf4j:slf4j-api:2.0.13'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
-javadoc.options {
-    addBooleanOption('-enable-preview', true)
-    addStringOption('-release', '21')
-}
-
 tasks.jar {
     manifest.attributes["Main-Class"] = "org.digitalsmile.gpio.GPIOBoard"
-}
-
-compileJava {
-    options.compilerArgs += ['--enable-preview']
 }
 
 test {
